--- a/Sunny/electron_preping/markdown_editor/index.html
+++ b/Sunny/electron_preping/markdown_editor/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown Editor</title>
     <link rel="stylesheet" href="node_modules/photon/dist/css/photon.css">
     <style type="text/css">
-      #app {
+    #app {
         position: absolute;
         top: 8px;
         bottom: 8px;
         left: 8px;
         right: 8px;
-      }
+    }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="window">
-      <div id="app" class="window-content"></div>
+        <div id="app" class="window-content"></div>
     </div>
     <script>require("./dist/renderer/app.js")</script>
-  </body>
+</body>
 </html>
